# thut

./: .travis.yml  CHANGELOG.md  README.md  shell.nix  thut.cabal
app/: Main.hs  Standalone.hs
corpus/: 001-hello-world.md  002-hello-passthrough.md
corpus/negative/input/: 001-bad-hello-world.md
corpus/negative/output/: 001-bad-hello-world.md
corpus/positive/: 001-hello-world.md
corpus/positive/output/: 001-hello-world.md  002-hello-passthrough.md
src/: Main.hs  Thut.hs
src/Thut/: Interpreter.hs  Parser.hs  Prelude.hs  Render.hs  Types.hs
test/Thut/: FileTests.hs
