cabal-version:       2.2

name:                thut
version:             0.0.1
bug-reports:         https://github.com/felixmulder/thut/issues
license-file:        LICENSE.md
author:              Felix Mulder
maintainer:          felix.mulder@gmail.com
copyright:           Felix Mulder
category:            Documentation
license:             BSD-3-Clause
synopsis:            A small tool to generate statically checked tutorials
description:         Based on tut by Rob Norris for Scala. This tool takes
                     markdown and substitutes all codeblocks with the 'thut'
                     title by evaluating the haskell code within

build-type:          Simple
extra-source-files:  CHANGELOG.md

executable thut
  main-is:
    Main.hs
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
  build-depends:
    , base >=4.12 && <4.13
    , ghcid >=0.7.4 && <0.8
    , text >=1.2.3.1 && <1.3
    , transformers >= 0.5.5.0 && <0.5.6
    , extra >= 1.6.14 && <1.7
  hs-source-dirs:
    src
  other-modules:
    Thut.Interpreter
    Thut.Parser
    Thut.Prelude
    Thut.Types
  default-language:
    Haskell2010
