cabal-version:       2.2

name:                thut
version:             0.0.1
bug-reports:         https://github.com/felixmulder/thut/issues
license-file:        LICENSE.md
author:              Felix Mulder
maintainer:          felix.mulder@gmail.com
copyright:           Felix Mulder
category:            Documentation
license:             BSD-3-Clause
synopsis:            A small tool to generate statically checked tutorials
description:         Based on tut by Rob Norris for Scala. This tool takes
                     markdown and substitutes all codeblocks with the 'thut'
                     title by evaluating the haskell code within

build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository    head
  type:              git
  location:          git://github.com/felixmulder/thut.git

common extensions
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    TupleSections
    TypeApplications

common flags
  ghc-options:
    -Wall -Wredundant-constraints
  default-language:
    Haskell2010

common deps
  build-depends:
    , base >=4.12 && <4.13
    , text >=1.2.3.1 && <1.3
    , data-default-class >= 0.1.2.0 && <0.1.3

library
  import:
    , extensions
    , flags
    , deps
  build-depends:
    , extra >= 1.6.14 && <1.7
    , ghcid >=0.7.2 && <0.8
    , transformers >= 0.5.5.0 && <0.5.7
  hs-source-dirs:
    src
  exposed-modules:
    Thut
    Thut.Interpreter
    Thut.Parser
    Thut.Render
    Thut.Types
  other-modules:
    Thut.Prelude

test-suite thut-tests
  import:
    , extensions
    , flags
    , deps
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  other-modules:
    Thut.FileTests
  build-depends:
    , directory >=1.3 && <1.4
    , thut
    , tasty >= 1.1 && <1.2
    , tasty-hspec >= 1.1 && <1.2
    , Diff >= 0.3 && <0.4
  build-tool-depends: tasty-discover:tasty-discover >=4.2 && <4.3

executable thut
  import:
    , extensions
    , flags
    , deps
  main-is:
    Standalone.hs
  hs-source-dirs:
    app
  build-depends:
    , thut
